fix(Dashbaord): fix legends text overlapping issue for responsive screen

--- a/crowdsource-ui/src/assets/css/dashboard.css
+++ b/crowdsource-ui/src/assets/css/dashboard.css
@@ -96,7 +96,7 @@ body.modal-open .supreme-container {
 }
 
 .chart-row .state-chart {
-  height: 42rem;
+  height: 40rem;
 }
 
 .chart-container {
@@ -348,11 +348,15 @@ body.modal-open .supreme-container {
   .chart-title {
     padding-right: 0;
   }
-  .chart-row .state-chart {
-    height: 40rem;
-  }
+
   .container {
     padding-top: 50px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .chart-row .chart {
+    height: 42rem;
   }
 }
 
@@ -484,6 +488,16 @@ body.modal-open .supreme-container {
   .state-popover>.bottomTip {
     left: 15%;
   }
+}
+
+@media screen and (max-width: 419px){
+  .chart-row .state-chart {
+    height: 37rem;
+  }
+}
+
+.h-95{
+  height:95% !important;
 }
 
 .language-dropdown {
